<resources>
    <string name="app_name">NanoHealthSuiteApp</string>
    <string name="log_in">Log In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="continue_">Continue</string>
    <string name="need_help">Need Help?</string>
    <string name="all_products">All Products</string>
    <string name="details">Details</string>
    <string name="order_now">Order Now</string>
    <string name="description">Description</string>
    <string name="reviews">Reviews</string>
    <string name="home">Home</string>
    <string name="cart">Cart</string>
    <string name="favorite">Favorite</string>
</resources>